Fix the logic behind ace's alternative values. Add more images to display money piles dinamically.

--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -72,7 +72,7 @@ aside, label, dialog {
 
 .money-display {
     position: relative;
-    width: 90px;
+    max-width: 100px;
 }
 
 #game-screen .ctnHidden {
